--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,6 +8,15 @@ body {
 	flex-direction: column;
 }
 
+a{
+  text-decoration: none;
+  color: #ffff;
+}
+
+a:hover {
+  color: #0295A9;
+  }
+
 
 .loginbody {
 	background: #0295A9;
