--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,14 +8,8 @@ html {
 body {
     margin: 0;
 }
-a{
-    text-decoration: none;
-    color: #ffff;
-}
 
-a:hover {
-    color: #0295A9;
-    }
+
 
 .header {
         grid-area: header;
@@ -195,7 +189,44 @@ form .fields .input-field {
     flex-direction: column;
     margin: 4px 0;
     padding: 5px;
+    
 }
+
+
+
+
+
+/*input box*/
+.input-field input {
+    border: 2px solid #f0f0f0;
+	border-radius: 4px;
+	display: block;
+	font-size: 12px;
+	padding: 10px;
+	width: 100%;
+}
+
+.input-field input:focus {
+    outline: 0;
+}
+
+
+.input-field.success input {
+    border-color: #09c372;
+}
+.input-field.error input  {
+    border-color: #ff3860;
+}
+
+.input-field.error {
+    color: #ff3860;
+    font-size: 9px;
+    height: 13px;
+}
+
+
+
+
 
 form .fields .input-field.one {
     width: 50%;
@@ -216,33 +247,6 @@ form .fields .input-field.three {
     font-size: 12px;
     font-weight: 500;
     color: #2e2e2e;
-}
-
-.input-field input,
-select {
-    outline: none;
-    font-size: 14px;
-    font-weight: 400;
-    color: #333;
-    border-radius: 5px;
-    border: 1px solid #aaa;
-    padding: 0 15px;
-    height: 42px;
-    margin: 8px 0;
-}
-
-.input-field input :focus,
-.input-field select:focus {
-    box-shadow: 10px 3px 6px rgba(0, 0, 0, 0.13);
-}
-
-.input-field select,
-.input-field input[type="date"] {
-    color: #707070;
-}
-
-.input-field input[type="date"]:valid {
-    color: #333;
 }
 
 .container1 form button,
@@ -327,6 +331,25 @@ select {
     cursor: pointer;
     font-size: 12px;
     font-weight: 400;
+
+}
+
+
+.container2 form button,
+.locBtn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1%;
+    width: 98%;
+    color:#fff;
+    border-radius: 5px;
+    background-color:7A7A7A;
+    transition: all 0.3s linear;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 400;
+
 
 }
 
@@ -537,4 +560,46 @@ select {
    
 
 
+}
+
+
+
+.input-field input,
+select {
+    outline: none;
+    font-size: 14px;
+    font-weight: 400;
+    color: #333;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+    padding: 0 15px;
+    height: 42px;
+    margin: 8px 0;
+}
+
+.w-100 {
+    width: 120% !important;
+   
+}
+
+
+
+
+
+
+
+/*
+
+.input-field input :focus,
+.input-field select:focus {
+    box-shadow: 10px 3px 6px rgba(0, 0, 0, 0.13);
+}
+
+.input-field select,
+.input-field input[type="date"] {
+    color: #707070;
+}
+
+.input-field input[type="date"]:valid {
+    color: #333;
 }
