--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,375 +1,464 @@
-@import url('https://rsms.me/inter/inter.css');
-
+@import url("https://rsms.me/inter/inter.css");
+:root {
+  --PrimaryColor: #0295a9;
+  --BackgroundColor: #efeff3;
+}
 
 html {
-    font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 /* Assign grid instructions to our parent grid container */
 
 .grid-container {
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    grid-template-rows: 50px 1fr;
-    grid-template-areas:
-        "sidenav header"
-        "sidenav main";
-    height: 100vh;
-    margin: 0%;
-    padding: 0%;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  grid-template-rows: 50px 1fr;
+  grid-template-areas:
+    "sidenav header"
+    "sidenav main";
+  height: 100vh;
+  margin: 0%;
+  padding: 0%;
 }
-
-
 
 /* Give every child element its grid name */
 .header {
-    grid-area: header;
-    background-color: #0295A9;
-    margin: 0px;
+  grid-area: header;
+  background-color: #0295a9;
+  margin: 0px;
 }
 
 .sidenav {
-    grid-area: sidenav;
-    background-color: #0295A9;
-    margin: 0px;
+  grid-area: sidenav;
+  background-color: #0295a9;
+  margin: 0px;
 }
 
 /*pitipass*/
 .main {
-    grid-area: main;
-    background-color: #EFEFF3;
-    margin: 0px;
+  grid-area: main;
+  background-color: #efeff3;
+  margin: 0px;
 }
 
-
-
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 16px;
-    background-color: #fff;
-
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+  background-color: #fff;
 }
 
 .sidenav {
-    display: flex;
-    /* Will be hidden on mobile */
-    flex-direction: column;
-    grid-area: sidenav;
-    background-color: #0295A9;
+  display: flex;
+  /* Will be hidden on mobile */
+  flex-direction: column;
+  grid-area: sidenav;
+  background-color: #0295a9;
 }
 
 .sidenav__list {
-    padding: 0;
-    margin-top: 85px;
-    list-style-type: none;
+  padding: 0;
+  margin-top: 85px;
+  list-style-type: none;
 }
 
 .sidenav__list-item {
-    padding: 20px 20px 20px 40px;
-    color: #ddd;
+  padding: 20px 20px 20px 40px;
+  color: #ddd;
 }
 
 .sidenav__list-item:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
 }
-
 
 .main-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    height: 40px;
-    /* Force our height since we don't have actual content yet */
-    background-color: #EFEFF3;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  height: 40px;
+  /* Force our height since we don't have actual content yet */
+  background-color: #efeff3;
 }
 
-
 .main-cards {
-    column-count: 2;
-    column-gap: 20px;
-    margin: 20px;
-    display: flex;
-
-
-
+  column-count: 2;
+  column-gap: 20px;
+  margin: 20px;
+  display: flex;
 }
 
 .card {
-    display: flex;
-    margin: 0 -5px;
-    flex-direction: column;
-    align-items: left;
-    width: 100%;
-    background-color: #ffff;
-    padding: 24px;
-    box-sizing: border-box;
-    border: #fff;
-    border-radius: 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 5%;
-
-
-
+  display: flex;
+  margin: 0 -5px;
+  flex-direction: column;
+  align-items: left;
+  width: 50%;
+  background-color: rgb(255, 255, 255);
+  padding: 24px;
+  box-sizing: border-box;
+  border: #fff;
+  border-radius: 20px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 5%;
+  margin-left: 30px;
 }
 
 /* Force varying heights to simulate dynamic content */
 .card:first-child {
-    height: fit-content;
+  height: fit-content;
 }
 
 .card:nth-child(2) {
-    height: auto;
+  height: auto;
 }
 
 .card:nth-child(3) {
-    height: 265px;
+  height: 265px;
 }
 
-
-
-
 .container {
-    position: relative;
-    transition: 0.3s ease;
-    background-color: #fff;
-    margin-top: 3%;
+  position: relative;
+  transition: 0.3s ease;
+  background-color: #fff;
+  margin-top: 3%;
 }
 
 .container form .title {
-    display: block;
-    margin-bottom: 8px;
-    font-size: 16px;
-    font-weight: 500;
-    margin: 6px 0;
-    color: #333;
+  display: block;
+  margin-bottom: 8px;
+  font-size: 16px;
+  font-weight: 500;
+  margin: 6px 0;
+  color: #333;
 }
 
 .container form .fields {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 form .fields .input-field {
-    display: flex;
-    width: calc(100% / 2 - 15px);
-    flex-direction: column;
-    margin: 4px 0;
-    padding: 5px;
+  display: flex;
+  width: calc(100% / 2 - 15px);
+  flex-direction: column;
+  margin: 4px 0;
+  padding: 5px;
 }
 
 form .fields .input-field.one {
-    width: 50%;
+  width: 50%;
 }
 
 form .fields .input-field.two {
-    width: 75%;
+  width: 75%;
 }
 
 form .fields .input-field.three {
-    width: 100%;
+  width: 100%;
 }
-
-
-
 
 .input-field label {
-    font-size: 12px;
-    font-weight: 500;
-    color: #2e2e2e;
+  font-size: 12px;
+  font-weight: 500;
+  color: #2e2e2e;
 }
 
+.card-headline {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add-btncontainer {
+  width: 60px;
+}
+/* .card-searchbar {
+  display: flex;
+  border: 1px solid var(--PrimaryColor);
+  border-radius: 8px;
+  margin: 0 1.5rem;
+  align-items: center;
+  padding: 0 0.5rem;
+  width: 100%;
+} */
 .input-field input,
 select {
-    outline: none;
-    font-size: 14px;
-    font-weight: 400;
-    color: #333;
-    border-radius: 5px;
-    border: 1px solid #aaa;
-    padding: 0 15px;
-    height: 42px;
-    margin: 8px 0;
+  outline: none;
+  font-size: 14px;
+  font-weight: 400;
+  color: #333;
+  border-radius: 5px;
+  border: 1px solid #aaa;
+  padding: 0 15px;
+  height: 42px;
+  margin: 8px 0;
 }
 
 .input-field input :focus,
 .input-field select:focus {
-    box-shadow: 10px 3px 6px rgba(0, 0, 0, 0.13);
+  box-shadow: 10px 3px 6px rgba(0, 0, 0, 0.13);
 }
 
 .input-field select,
 .input-field input[type="date"] {
-    color: #707070;
+  color: #707070;
 }
 
 .input-field input[type="date"]:valid {
-    color: #333;
+  color: #333;
 }
 
 .container1 form button,
 .subBtn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 45px;
-    max-width: 200px;
-    width: 100%;
-    border: none;
-    outline: none;
-    color: #fff;
-    border-radius: 10px;
-    margin-left: 10px;
-    background-color: #0295A9;
-    transition: all 0.3s linear;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 45px;
+  max-width: 200px;
+  width: 100%;
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 10px;
+  margin-left: 10px;
+  background-color: #02a926;
+  transition: all 0.3s linear;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
 }
-
 
 .container2 form button,
 .viewBtn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    width: 100%;
-    border: none;
-    outline: none;
-    color: #fff;
-    border-radius: 10px;
-    margin-left: 0px;
-    background-color: #0295A9;
-    transition: all 0.3s linear;
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: 400;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 100%;
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 10px;
+  margin-left: 0px;
+  background-color: #0295a9;
+  transition: all 0.3s linear;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 .container2 form button,
 .delBtn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    width: 100%;
-    border: none;
-    color: #fff;
-    border-radius: 10px;
-    margin-left: 0px;
-    background-color: #DC2626;
-    transition: all 0.3s linear;
-    cursor: pointer;
-    font-size: 12px;
-
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 100%;
+  border: none;
+  color: #fff;
+  border-radius: 10px;
+  margin-left: 0px;
+  background-color: #dc2626;
+  transition: all 0.3s linear;
+  cursor: pointer;
+  font-size: 12px;
 }
 
-
 form button:hover {
-    background-color: #555;
+  background-color: #555;
 }
 
 form button i,
 form .backBtn i {
-    margin: 0 6px;
+  margin: 0 6px;
 }
 
 form .backBtn i {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 form .buttons {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 form .buttons button,
 .backBtn {
-    margin-right: 14px;
+  margin-right: 14px;
 }
-
-form .input[type=text]:focus {
-    border: 3px solid #555;
+.searchBar {
+  /* border: 1px solid black; */
+  width: 100%;
 }
-
+.searchBar input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid var(--PrimaryColor);
+  border-radius: 5px;
+}
+.searchBar input[type="text"]:focus {
+  border: 3px solid #555;
+}
 
 @media only screen and (max-width: 1400px) {
+  /* Show the sidenav */
+  .grid-container {
+    grid-template-columns: 240px 1fr;
+    /* Show the side nav for non-mobile screens */
+    grid-template-areas:
+      "sidenav header"
+      "sidenav main"
+      "sidenav footer";
+  }
 
-    /* Show the sidenav */
-    .grid-container {
-        grid-template-columns: 240px 1fr;
-        /* Show the side nav for non-mobile screens */
-        grid-template-areas:
-            "sidenav header"
-            "sidenav main"
-            "sidenav footer";
-    }
-
-    .sidenav {
-        display: flex;
-        width: auto;
-        flex-direction: column;
-    }
+  .sidenav {
+    display: flex;
+    width: auto;
+    flex-direction: column;
+  }
 }
 
 /* Medium-sized screen breakpoint (tablet, 1050px) */
 @media only screen and (max-width: 1000px) {
+  /* Break out main cards into two columns */
+  .main-cards {
+    column-count: 1;
+    column-gap: 50px;
+    margin-bottom: 10%;
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-    /* Break out main cards into two columns */
-    .main-cards {
-        column-count: 1;
-        column-gap: 50px;
-        margin-bottom: 10%;
-        display: flex;
-        flex-wrap: wrap;
-
-
-    }
-
-    form .fields .input-field {
-        display: flex;
-        width: calc(90%/ 1 - 20px);
-        flex-direction: column;
-        margin: 4px 4px 4px 4px
-    }
+  form .fields .input-field {
+    display: flex;
+    width: calc(90% / 1 - 20px);
+    flex-direction: column;
+    margin: 4px 4px 4px 4px;
+  }
 }
 
-
-
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
 }
 
 th {
-    background-color: #0295A9;
-    color: #ffff;
-
-
-
+  background-color: #0295a9;
+  color: #ffff;
 }
 
 th,
 td {
-    text-align: left;
-    padding: 8px;
+  text-align: left;
+  padding: 8px;
 
-    font-size: 12px;
+  font-size: 12px;
 }
 
 tr:nth-child(even) {
-    background-color: #ffff
+  background-color: #ffff;
 }
+
+
+
+.categoryModalBox {
+    display: none;
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: hidden;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.74); 
+  }
+  
+  .categoryModalContent {
+    background-color: white;
+    margin: auto;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    gap: 1rem;
+    border-radius: 10px;
+    position: relative;
+  }
+  
+  .categoryModalContent span {
+    text-align: right;
+    position: absolute;
+    right: 0.8rem;
+    top: 0.8rem;
+    cursor: pointer;
+  }
+  
+  .categoryModalContent form {
+    display: flex;
+    width: 100%;
+    gap: 2rem;
+  }
+  
+  .categoryModalContent form label {
+    display: block;
+    margin-bottom: 0.5rem;
+  }
+  
+  .categoryModalContent form .category-name {
+    width: 100%;
+  }
+  
+  .categoryModalContent form input {
+    padding: 0.5rem;
+    width: 100%;
+    border: 1px solid rgb(209, 209, 209);
+    border-radius: 5px;
+  }
+  
+  .categoryModalContent form ul {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  
+  .categoryModalContent form .form-top {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+  }
+  
+  .categoryModalContent form button {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+  }
+  
+  .categoryModalContent .delete-btn {
+    background-color: red;
+    color: white;
+  }
+  
+  .categoryModalContent .modal-add-btn {
+    background-color: var(--PrimaryColor);
+    color: white;
+    width: 7rem;
+  }
+  
+  .categoryModalContent .modal-buttons {
+    display: flex;
+    justify-content: right;
+    gap: 1.5rem;
+  }
