--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,24 @@
 @import url('https://rsms.me/inter/inter.css');
 html { font-family: 'Inter', sans-serif; }
 
+
+.page {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
+}
+
+.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+
 body {
 	background: #EFEFF3;
 	display: flex;
@@ -26,9 +44,10 @@ a:hover {
 	height: 100vh;
 	flex-direction: column;
 }
+
+
 .loginform {
 	width: 500px;
-    width: 600px;
 	padding: 30px;
 	background: #fff;
 	border-radius: 20px;
@@ -100,12 +119,12 @@ label {
 
   
   
-  @media (max-width: 1400px) {
-    #grid-container {
-      grid-template-columns: 100%;
-    }
+  @media (max-width: 400px) {
+    
+    .loginform {
+      width: 250px;
   }
-  
+}
   @media (max-width: 950px) {
     .title-container h1 {
       display: none;
